--- a/.github/workflows/production_release.yaml
+++ b/.github/workflows/production_release.yaml
@@ -74,13 +74,10 @@ jobs:
           git tag ${{ env.next_version }}
           git push origin ${{ env.next_version }}
 
-      - name: Set up GitHub CLI
-        uses: actions/setup-gh-cli@v2
-
       - name: Create PR from devel to main
         id: create_pr
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "${{ env.GITHUB_TOKEN }}" | gh auth login --with-token
           pr_number=$(gh pr create \
@@ -92,10 +89,10 @@ jobs:
           )
           echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
 
-      - name: Merge PR
+      - name: Merge PR to main
         if: steps.create_pr.outputs.pr_number != ''
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "${{ env.GITHUB_TOKEN }}" | gh auth login --with-token
-          gh pr merge ${{ steps.create_pr.outputs.pr_number }} --merge --admin
+          gh pr merge ${{ steps.create_pr.outputs.pr_number }} --squash --admin
