--- a/.github/workflows/production_release.yaml
+++ b/.github/workflows/production_release.yaml
@@ -24,6 +24,11 @@ jobs:
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
 
+      - name: Install go plugins for protoc
+        run: |
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+
       - name: Install Buf CLI
         uses: bufbuild/buf-setup-action@v1
 
