--- a/.github/workflows/production_release.yaml
+++ b/.github/workflows/production_release.yaml
@@ -28,6 +28,7 @@ jobs:
         run: |
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+          export PATH="$PATH:$(go env GOPATH)/bin"
 
       - name: Install Buf CLI
         uses: bufbuild/buf-setup-action@v1
