--- a/.github/workflows/production_release.yaml
+++ b/.github/workflows/production_release.yaml
@@ -24,20 +24,18 @@ jobs:
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
 
-      - name: Install go plugins for protoc
-        run: |
-          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
-          export PATH="$PATH:$(go env GOPATH)/bin"
-
       - name: Install Buf CLI
         uses: bufbuild/buf-setup-action@v1
 
       - name: Install Go dependencies
         run: make install
 
-      - name: Generate Go stubs from proto files
-        run: make proto
+      - name: Generate proto stubs
+        run: |
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+          export PATH="$PATH:$(go env GOPATH)/bin"
+          make proto
 
       - name: Lint the proto files
         run: buf lint
