--- a/.github/workflows/production_release.yaml
+++ b/.github/workflows/production_release.yaml
@@ -15,6 +15,9 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
