--- a/.github/workflows/production_release.yaml
+++ b/.github/workflows/production_release.yaml
@@ -17,7 +17,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      pull-requests: write
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
@@ -78,6 +77,8 @@ jobs:
 
       - name: Create tag and push
         run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
           git tag ${{ env.next_version }}
           git push origin ${{ env.next_version }}
 
@@ -86,20 +87,26 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "${{ env.GITHUB_TOKEN }}" | gh auth login --with-token
-          pr_number=$(gh pr create \
-            --base main \
-            --head devel \
-            --title "Automated Release PR for ${{ env.next_version }}" \
-            --body "Releasing ${{ env.next_version }} from devel to main" \
-            --json number --jq '.number'
-          )
-          echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
+          gh pr create \
+            -B main \
+            -H devel \
+            -t "Bumped version ${{ env.next_version }}" \
+            -f
 
       - name: Merge PR to main
-        if: steps.create_pr.outputs.pr_number != ''
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "${{ env.GITHUB_TOKEN }}" | gh auth login --with-token
-          gh pr merge ${{ steps.create_pr.outputs.pr_number }} --squash --admin
+          gh pr merge \
+            $(gh pr list --state open --base main --head devel --json number --jq ".[0].number") \
+            --squash \
+            --admin
+
+      - name: Create GitHub Release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create ${{ env.next_version }} \
+            -t "Release ${{ env.next_version }}" \
+            --notes-from-tag \
+            --target main
