AG-76 Updated production release pipeline

--- a/.github/workflows/production_release.yaml
+++ b/.github/workflows/production_release.yaml
@@ -88,9 +88,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh pr create \
-            -B main \
-            -H devel \
-            -t "Bumped version ${{ env.next_version }}" \
+            --base main \
+            --head devel \
+            --title "Bumped version ${{ env.next_version }}" \
             -f
 
       - name: Merge PR to main
