--- a/.github/workflows/production_release.yaml
+++ b/.github/workflows/production_release.yaml
@@ -75,32 +75,50 @@ jobs:
           echo "next_version=$next_version" >> $GITHUB_ENV
           echo "Next version: $next_version"
 
+      - name: Fetch all branches
+        run: git fetch --all
+
+      - name: Commit uncommitted changes
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add .
+          git commit -m "Auto-generated changes for release ${{ env.next_version }}" || echo "No changes to commit"
+
+      - name: Checkout and prepare branches
+        run: |
+          git checkout devel
+          git pull origin devel
+          git checkout main
+          git pull origin main
+          git checkout devel
+
+      - name: Create PR from devel to main
+        run: |
+          gh pr create \
+            --base main \
+            --head devel \
+            --title "Bumped version ${{ env.next_version }}" \
+            --body "Merging changes for version ${{ env.next_version }} into main" \
+            -f
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Merge PR to main
+        run: |
+          gh pr merge \
+            $(gh pr list --state open --base main --head devel --json number --jq ".[0].number") \
+            --squash \
+            --admin
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Create tag and push
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git tag ${{ env.next_version }}
           git push origin ${{ env.next_version }}
-
-      - name: Create PR from devel to main
-        id: create_pr
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh pr create \
-            --base main \
-            --head devel \
-            --title "Bumped version ${{ env.next_version }}" \
-            -f
-
-      - name: Merge PR to main
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh pr merge \
-            $(gh pr list --state open --base main --head devel --json number --jq ".[0].number") \
-            --squash \
-            --admin
 
       - name: Create GitHub Release
         env:
