--- a/.github/workflows/production_release.yaml
+++ b/.github/workflows/production_release.yaml
@@ -86,12 +86,15 @@ jobs:
           export PATH="$PATH:$(go env GOPATH)/bin"
           make proto
 
+      - name: Bump version in README.md
+        run: sed -i "s/\- \[v[0-9]*\.[0-9]*\.[0-9]*\](https:\/\/github.com\/Vortex-Livestock\/agrivanna-grpc-definitions\/releases\/tag\/v[0-9]*\.[0-9]*\.[0-9]*)/\- \[${{ env.next_version }}](https:\/\/github.com\/Vortex-Livestock\/agrivanna-grpc-definitions\/releases\/tag\/${{ env.next_version }})/g" README.md
+
       - name: Commit changes to release branch
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add .
-          git commit -m "Prepare release ${{ env.next_version }}" || echo "No changes to commit"
+          git commit -m "Release ${{ env.next_version }}" || echo "No changes to commit"
           git push origin ${{ env.release_branch }}
 
       - name: Sync release branch with main and devel
