AG-76 Updated production release pipeline

--- a/.github/workflows/production_release.yaml
+++ b/.github/workflows/production_release.yaml
@@ -37,6 +37,9 @@ jobs:
       - name: Lint the proto files
         run: buf lint
 
+      - name: Fetch all branches
+        run: git fetch --all
+
       - name: Extract current version
         id: version
         run: |
