Feature/ag 76 protobuff defintions (#34)
* AG-76 Protobuf definitions for animal and production record

* AG-76 Implemented production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated make proto step

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated continuous integration pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

* AG-76 Updated production release pipeline

--- a/.github/workflows/production_release.yaml
+++ b/.github/workflows/production_release.yaml
@@ -40,6 +40,7 @@ jobs:
       - name: Extract current version
         id: version
         run: |
+          git fetch --tags
           current_version=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
           echo "current_version=$current_version" >> $GITHUB_ENV
 
