--- a/.github/workflows/production_release.yaml
+++ b/.github/workflows/production_release.yaml
@@ -19,32 +19,22 @@ jobs:
       contents: write
       pull-requests: write
     steps:
+      # Step 1: Checkout source code and fetch all branches
       - name: Checkout source code
         uses: actions/checkout@v3
 
       - name: Fetch all branches
-        run: git fetch --all
+        run: git fetch --all --tags
 
-      - name: Install Protoc
-        uses: arduino/setup-protoc@v3
-
-      - name: Install Buf CLI
-        uses: bufbuild/buf-setup-action@v1
-
-      - name: Install Go dependencies
-        run: make install
-
-      - name: Lint the proto files
-        run: buf lint
-
+      # Step 2: Extract the current version
       - name: Extract current version
         id: version
         run: |
-          git fetch --tags
           current_version=$(git describe --tags --abbrev=0 --tags 2>/dev/null || git tag | tail -n 1 || echo "v0.0.0")
           echo "current_version=$current_version"
           echo "current_version=$current_version" >> $GITHUB_ENV
 
+      # Step 3: Calculate the next version
       - name: Calculate next version
         id: next_version
         run: |
@@ -71,6 +61,7 @@ jobs:
           echo "next_version=$next_version" >> $GITHUB_ENV
           echo "Next version: $next_version"
 
+      # Step 4: Create the release branch
       - name: Create release branch
         id: create_release_branch
         run: |
@@ -81,6 +72,7 @@ jobs:
           git push origin $release_branch
           echo "release_branch=$release_branch" >> $GITHUB_ENV
 
+      # Step 5: Generate proto stubs
       - name: Generate proto stubs
         run: |
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
@@ -88,24 +80,25 @@ jobs:
           export PATH="$PATH:$(go env GOPATH)/bin"
           make proto
 
+      # Step 6: Bump version in README.md
       - name: Bump version in README.md
-        run: sed -i "s/\- \[v[0-9]*\.[0-9]*\.[0-9]*\](https:\/\/github.com\/Vortex-Livestock\/agrivanna-grpc-definitions\/releases\/tag\/v[0-9]*\.[0-9]*\.[0-9]*)/\- \[${{ env.next_version }}](https:\/\/github.com\/Vortex-Livestock\/agrivanna-grpc-definitions\/releases\/tag\/${{ env.next_version }})/g" README.md
-
-      - name: Commit changes to release branch
         run: |
+          sed -i "s/\- \[v[0-9]*\.[0-9]*\.[0-9]*\](https:\/\/github.com\/Vortex-Livestock\/agrivanna-grpc-definitions\/releases\/tag\/v[0-9]*\.[0-9]*\.[0-9]*)/\- \[${{ env.next_version }}](https:\/\/github.com\/Vortex-Livestock\/agrivanna-grpc-definitions\/releases\/tag\/${{ env.next_version }})/g" README.md
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add .
-          git commit -m "Release ${{ env.next_version }}" || echo "No changes to commit"
+          git add README.md
+          git commit -m "Update README.md with version ${{ env.next_version }}" || echo "No changes to commit"
           git push origin ${{ env.release_branch }}
 
+      # Step 7: Sync release branch with main and devel
       - name: Sync release branch with main and devel
         run: |
           git checkout ${{ env.release_branch }}
-          git merge origin/main || echo "No conflicts with main"
-          git merge origin/devel || echo "No conflicts with devel"
+          git pull origin main || echo "No changes from main"
+          git pull origin devel || echo "No changes from devel"
           git push origin ${{ env.release_branch }}
 
+      # Step 8: Create PR to merge release into main
       - name: Create PR to merge release into main
         id: pr_main
         run: |
@@ -118,6 +111,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
 
+      # Step 9: Create PR to merge release into devel
       - name: Create PR to merge release into devel
         id: pr_devel
         run: |
@@ -130,6 +124,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
 
+      # Step 10: Merge PR into main
       - name: Merge PR into main
         run: |
           pr_number=$(gh pr list --state open --base main --head ${{ env.release_branch }} --json number --jq ".[0].number")
@@ -137,6 +132,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
 
+      # Step 11: Merge PR into devel
       - name: Merge PR into devel
         run: |
           pr_number=$(gh pr list --state open --base devel --head ${{ env.release_branch }} --json number --jq ".[0].number")
@@ -144,6 +140,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
 
+      # Step 12: Tag the release
       - name: Tag the release
         run: |
           git checkout main
@@ -151,6 +148,7 @@ jobs:
           git tag ${{ env.next_version }}
           git push origin ${{ env.next_version }}
 
+      # Step 13: Create GitHub Release
       - name: Create GitHub Release
         run: |
           gh release create ${{ env.next_version }} \
