--- a/.releaserc
+++ b/.releaserc
@@ -6,8 +6,6 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    "@semantic-release/npm",
-    "@semantic-release/github",
-    "@semantic-release/git"
+    "@semantic-release/github"
   ]
 }
