--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -3,8 +3,8 @@ name: Continuous Integration
 on:
   pull_request:
     branches:
-      - main
       - devel
+      - feature/*
 
 jobs:
   ci:
@@ -13,7 +13,11 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
+        with:
+          ref: devel
+
       - name: Install Buf CLI
         uses: bufbuild/buf-setup-action@v1
+
       - name: Lint the proto files
         run: buf lint
