--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,8 +20,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "lts/*"
+      - name: Initialize package.json
+        run: npm init -y
       - name: Install dependencies
-        run: npm install
+        run: npm install -D semantic-release @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/github
       - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
         run: npm audit signatures
       - name: Run Semantic Release
